# passgen

./: .gitignore  CMakeLists.txt  README.md
src/: color.hpp  main.cpp
